@@ -3648,23 +3648,7 @@ namespace {
 
 		TORRENT_ASSERT(m_dht);
 
-		// announce to DHT every 15 minutes
-		int delay = std::max(m_settings.get_int(settings_pack::dht_announce_interval)
-			/ std::max(int(m_torrents.size()), 1), 1);
-
-		if (!m_dht_torrents.empty())
-		{
-			// we have prioritized torrents that need
-			// an initial DHT announce. Don't wait too long
-			// until we announce those.
-			delay = std::min(4, delay);
-		}
-
-		ADD_OUTSTANDING_ASYNC("session_impl::on_dht_announce");
-		error_code ec;
-		m_dht_announce_timer.expires_from_now(seconds(delay), ec);
-		m_dht_announce_timer.async_wait([this](error_code const& err)
-			{ this->wrap(&session_impl::on_dht_announce, err); });
+		update_dht_announce_interval();
 
 		if (!m_dht_torrents.empty())
 		{
@@ -6590,6 +6574,15 @@ namespace {
 		error_code ec;
 		int delay = std::max(m_settings.get_int(settings_pack::dht_announce_interval)
 			/ std::max(int(m_torrents.size()), 1), 1);
+
+		if (!m_dht_torrents.empty())
+		{
+			// we have prioritized torrents that need
+			// an initial DHT announce. Don't wait too long
+			// until we announce those.
+			delay = std::min(4, delay);
+		}
+
 		m_dht_announce_timer.expires_from_now(seconds(delay), ec);
 		m_dht_announce_timer.async_wait([this](error_code const& e) {
 			this->wrap(&session_impl::on_dht_announce, e); });
