@@ -1,3 +1,4 @@
+	* fix DHT announce timer issue
 	* use DSCP_TRAFFIC_TYPE socket option on windows
 	* update default ToS setting according to RFC 8622
 	* keep trying to announce to trackers even when all fail
